# yew-actix-graphql-mongodb-boilerplate

./: .env  .gitignore  README.md  env.example
client/: Cargo.toml  index.html  main.rs  state.rs  trunk.toml
client/graphql/: get_todos.graphql  schema.graphql  set_todos.graphql
client/services/: todos.rs
client/types/: error.rs  mod.rs  todos.rs
client/utils/: mod.rs  request.rs
server/: Cargo.toml  main-mongo.rs  main.rs  model.rs  test.rs
