[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "main.rs"

[dependencies]
yew = "0.19"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
# need wasm-bindgen for JsCast
wasm-bindgen = "0.2"
strum = "0.24"
strum_macros = "0.24"
serde = "1"
serde_derive = "1"
gloo = "0.6"
