[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "main.rs"

[dependencies]
yew = "0.19"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
# need wasm-bindgen for JsCast
wasm-bindgen = "0.2"
strum = "0.24"
strum_macros = "0.24"
serde = "1"
serde_derive = "1"
gloo = "0.6"

wasm-bindgen-futures = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.7", features = ["json"] }
thiserror = "1"
yew-hooks = "0.1.42"
log = "0.4.6"
wasm-logger = "0.2.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
