[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
#path = "main.rs"
path = "main-mongo.rs"

[dependencies]
actix-web = "4"
mongodb = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.6.1"
futures = "0.3.21"
async-graphql = { version = "3.0.38", features = ["chrono", "apollo_persisted_queries"] }
async-graphql-actix-web = "3.0.38"
serde_json = "1.0.59"